Update styling on create workout form. Corrected padding, sizing, and horizontal alignment

--- a/app/assets/stylesheets/api/workouts.scss
+++ b/app/assets/stylesheets/api/workouts.scss
@@ -10,7 +10,7 @@
   background-color: rgba(255,255,255,.4);
   padding: 10px;
   font-size: 18px;
-  width: 70vw;
+  padding-left: 15px;
   min-width: 810px;
 }
 
@@ -36,7 +36,7 @@
   display: flex;
   width: 70%;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: inherit;
 }
 
 #date {
@@ -51,6 +51,21 @@
 .new-workout-form fieldset input {
   width: 58px;
   margin: 0 5px 0 5px;
+}
+
+.new-workout-form input[type=submit] {
+
+    border-style: outset;
+    transition: all 1s;
+    border-radius: 5px;
+    border-width: 1px;
+    padding: 7px;
+    color: white;
+    height: 40px;
+    margin: 15px;
+    min-height: 20px;
+    box-shadow: 0 2px 6px rgba(0,0,0,.3);
+    padding-right: 14px;
 }
 
 .new-workout-date {
